@@ -1,5 +1,7 @@
 2009-07-04
 	* Remove newline with comment only lines in TEXT
+	* Improved parsing of graph arguments, removed "log"|"normal" arguments in
+	favour of -l switch
 
 2009-07-01
 	* Fix escaping of comments in TEXT (sf.net #2813390, thanks Nils)
